# TAMED

./: .breakpoints  README.md  main.py  os_run.py  platformer.py  platformer_new.py  pyproject.toml  web_search.py
Assets/Enigmes/: note.md
Core/: documentation.md  operations.py  scan_unlocks.py  sphere.py
Notes/: Cahier des Charges.md  Ideas and bugs.md  Notebook.md  Project_Plan.md  README.md
Project Main Scripts/: main.py  os_run.py
Project Notes/: Cahier des Charges.md  Dev Info.md  Notebook.md  histoire.md
Project Notes/Archive/: archived_platformer.py  exemple_js+svg+html+css.html  sphere.py
Project Notes/Archive/Platformer/: components.py  (+1 more)
Scripts/: main.py
__pycache__/: just_a_question.md
ext/: __init__.py  file_explorer.py  operations.py  platformer.py  web_search.py
ext/Alt/: snake.py
ext/Apps/: documentation.md  file_explorer.py  planet_viewer.py  snake.py  sphere.py  web_search.py
ext/Core/: documentation.md  file_explorer.py  operations.py  platformer.py  scan_messages.py  scan_unlocks.py  sphere.py  sphere2.py  variables.py
ext/Platformer/: components.py  data.txt  documentation.md  flying_robot_physics.py  game_utils.py  images.txt  map_matrix(1).py  map_matrix(2).py  map_matrix.py  map_matrix1.py  map_matrix2.py  map_utils.py  math_utils.py  plat_variables.py  platformer.py  test.py
ext/Platformer2/: documentation.md  platformer.py
ext/Platformer_Scrolling/: components.py  game_utils.py  new_platformer.py
ext/SphereApp/: documentation.md  planet_viewer.py
new_platformer/: components.py  documentation.md  map.py
(+10 files in other folders)
