[tool.poetry]
name = "Projet-NSI"
version = "0.1.1"
description = ""
authors = ["AmbF, JoachimLaplanch, Mathis"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
