[tool.poetry]
name = "TAMED"
version = "0.3.2"
description = "T.A.M.E.D., le jeu. Vous etes dans la peau d'un technicien qui travaille pour une compagnie de haute technologie et qui collabore avec l'armée francaise sur un projet ultra secret."
authors = ["Ambroise, Joachim, Mathis"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
